--- a/app/views/owners/settings.html.haml
+++ b/app/views/owners/settings.html.haml
@@ -32,8 +32,6 @@
       Feature settings are special features that can be enabled by administrators. They are used to
       test out experimental features or otherwise only enable things for certain users.
 
-    = semantic_form_for @owner do |f|
-      = f.inputs do
-        = f.input :buildpacks, as: :boolean, hint: "Add experimental support for Heroku buildpacks. Allows the installation of custom libraries, etc.."
-      = f.actions do
-        = f.action :submit, label: "Update feature settings"
+    = simple_form_for @owner do |f|
+      = f.input :buildpacks, as: :boolean, hint: "Add experimental support for Heroku buildpacks. Allows the installation of custom libraries, etc.."
+      = f.button :submit, "Update feature settings"
