--- a/app/views/scrapers/scraperwiki.html.haml
+++ b/app/views/scrapers/scraperwiki.html.haml
@@ -16,19 +16,23 @@
 
         %p Or you can paste the name of the scraper below, it's up to you.
 
-  = semantic_form_for @scraper, url: scraperwiki_scrapers_path do |f|
-    = f.inputs do
-      .row
-        .col-sm-8
-          - if @name_set
-            = f.hidden_field :scraperwiki_shortname
-          - else
-            = f.input :scraperwiki_shortname, label: "Name of ScraperWiki scraper", hint: "The name (as it's shown in a url) of the ScraperWiki Classic scraper that you want to fork", placeholder:"city_of_sydney_development_applications"
-      .row
-        .col-sm-2
-          = f.input :owner, collection: current_user.all_owners.map{|o| [o.nickname, o.id, {"data-content" => "#{owner_image(o, 20, false)} #{o.nickname}"}]}, include_blank: false
-        .col-sm-6
-          = f.input :name, prepend: "/", hint: "Name to give the scraper here and on GitHub", placeholder:"city_of_sydney_development_applications"
+  = simple_form_for @scraper, url: scraperwiki_scrapers_path do |f|
+    .row
+      .col-sm-8
+        - if @name_set
+          = f.hidden_field :scraperwiki_shortname
+        - else
+          = f.input :scraperwiki_shortname, label: "Name of ScraperWiki scraper", hint: "The name (as it's shown in a url) of the ScraperWiki Classic scraper that you want to fork", placeholder:"city_of_sydney_development_applications"
+    .row
+      .col-sm-2
+        = f.input :owner, collection: current_user.all_owners.map{|o| [o.nickname, o.id, {"data-content" => "#{owner_image(o, 20, false)} #{o.nickname}"}]}, include_blank: false
 
-    = f.actions do
-      = f.action :submit, label: "Fork ScraperWiki scraper"
+      .col-sm-6
+        -# Using long-winded form here because simple_form doesn't directly support prepends
+        = f.input :name do
+          .input-group
+            %span.input-group-addon /
+            = f.input_field :name, class: "form-control", placeholder:"city_of_sydney_development_applications"
+          %span.help-block Name to give the scraper here and on GitHub
+
+    = f.button :submit, "Fork ScraperWiki scraper"
