Replace semantic_form_for with simple_form_for

--- a/app/views/scrapers/new.html.haml
+++ b/app/views/scrapers/new.html.haml
@@ -1,17 +1,21 @@
 .container
   %h1 New scraper
 
-  = semantic_form_for @scraper do |f|
-    = f.inputs do
-      .row
-        .col-sm-6
-          = f.input :original_language_key, collection: Morph::Language.languages_supported.map{|l| [l.human, l.key, {"data-content" => "#{image_tag(l.image_path, size: '20x20')} #{l.human}"}]}, include_blank: false, hint: "The language you would like to write your scraper in. You can change this later.", label: "Language"
-      .row
-        .col-sm-2
-          = f.input :owner, collection: current_user.all_owners.map{|o| [o.nickname, o.id, {"data-content" => "#{owner_image(o, 20, false)} #{o.nickname}"}]}, include_blank: false
-        .col-sm-6
-          = f.input :name, prepend: "/", hint: "Name to give the scraper here and on GitHub", placeholder:"city_of_sydney_development_applications"
-      = f.input :description, label: "Description (optional)"
+  = simple_form_for @scraper do |f|
+    .row
+      .col-sm-6
+        = f.input :original_language_key, collection: Morph::Language.languages_supported.map{|l| [l.human, l.key, {"data-content" => "#{image_tag(l.image_path, size: '20x20')} #{l.human}"}]}, include_blank: false, hint: "The language you would like to write your scraper in. You can change this later.", label: "Language"
+    .row
+      .col-sm-2
+        = f.input :owner_id, collection: current_user.all_owners.map{|o| [o.nickname, o.id, {"data-content" => "#{owner_image(o, 20, false)} #{o.nickname}"}]}, include_blank: false
+      .col-sm-6
+        -# Using long-winded form here because simple_form doesn't directly support prepends
+        = f.input :name do
+          .input-group
+            %span.input-group-addon /
+            = f.input_field :name, class: "form-control", placeholder:"city_of_sydney_development_applications"
+          %span.help-block Name to give the scraper here and on GitHub
 
-    = f.actions do
-      = f.action :submit
+    = f.input :description, label: "Description (optional)"
+
+    = f.button :submit
