--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -35,7 +35,7 @@
           = form_tag search_path, method: "get", role: "search", class: "navbar-form" do
             .input-group
               = label_tag :query, "Search", class: 'sr-only'
-              = search_field_tag :query, nil, maxlength: "256", name: "q", type: "search", placeholder: "Search", class: "form-control"
+              = search_field_tag :query, @q, maxlength: "256", name: "q", type: "search", placeholder: "Search", class: "form-control"
               .input-group-btn
                 = button_tag value: 'Submit', class: 'btn btn-default', name: nil do
                   %span.sr-only Submit
