--- a/app/views/scrapers/_data.html.haml
+++ b/app/views/scrapers/_data.html.haml
@@ -32,4 +32,4 @@
                   - row.each_value do |v|
                     %td
                       %div.has-popover{data: {toggle: "popover", placement: "bottom", trigger: "hover", content: v, container: "body"}}
-                        = auto_link(v.to_s)
+                        = auto_link_fallback(v.to_s)
