--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -43,16 +43,16 @@
     .row
       .col-md-4
         %blockquote
-          %p Allow me to be the first to say amazeballs!
+          %p Scrapers are kept in public github repos and then we consume the data from an API, delicious! Is like scrapers with steroids!
           %small
-            = image_tag "https://www.gravatar.com/avatar/1d9536edb482e9e1f56b86459abb06c4?s=30", size: "50x50" , class: "img-circle"
-            = link_to "Henare Degan", "https://twitter.com/henaredegan"
+            = image_tag "https://www.gravatar.com/avatar/976cd09092e36aad6a7b959822b78c89?s=30", size: "50x50" , class: "img-circle"
+            = link_to "J. Pablo Pérez Trabucco", "https://morph.io/rezzo"
       .col-md-4
         %blockquote
-          %p I like it but then I would say that
+          %p I love Morph because it gives you everything you need to run a scraper. I've written a system which notifies me when Australian FOI disclosure logs are updated.
           %small
-            = image_tag "https://www.gravatar.com/avatar/30e5eec125c81e549294137a3ddd6c74?s=30", size: "50x50", class: "img-circle"
-            = link_to "Matthew Landauer", "https://twitter.com/matthewlandauer"
+            = image_tag "https://avatars3.githubusercontent.com/u/851118?v=3&s=80", size: "50x50", class: "img-circle"
+            = link_to "Will", "https://morph.io/hailspuds"
       .col-md-4
         %blockquote
           %p Does it come with plasticine?
