use authors morph user names instead of full names this is to emphasise them as users of morph.

--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -46,10 +46,10 @@
           %p Scrapers are kept in public github repos and then we consume the data from an API, delicious! Is like scrapers with steroids!
           %footer
             = image_tag "https://www.gravatar.com/avatar/976cd09092e36aad6a7b959822b78c89?s=60", size: "60x60" , class: "img-circle"
-            = link_to "J. Pablo Pérez Trabucco", "https://morph.io/rezzo"
+            = link_to "rezzo", "https://morph.io/rezzo"
       .col-md-6
         %blockquote
           %p I love Morph because it gives you everything you need to run a scraper. I've written a system which notifies me when Australian FOI disclosure logs are updated.
           %footer
             = image_tag "https://avatars3.githubusercontent.com/u/851118?v=3&s=60", size: "60x60", class: "img-circle"
-            = link_to "Will", "https://morph.io/hailspuds"
+            = link_to "hailspuds", "https://morph.io/hailspuds"
