change header logo font to Helvetica Neue with adjusted treadment slightly increased letter-spacing and slightly darker than header links
closes #553

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -47,7 +47,11 @@ footer {
 }
 
 .navbar-brand {
-  font-family: 'Comfortaa', cursive;
+  letter-spacing: 1px;
+
+  .navbar-default & {
+    color: #555;
+  }
 }
 
 .container#banner {
