--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -21,7 +21,7 @@
         %i.fa.fa-recycle.fa-5x
         %h4 Over 2000 scrapers with data
         %p
-          Over 2000 public scrapers, with data, available for you to reuse, for free
+          Over 2000 public scrapers, with data, available for you to reuse, for free. Download data as a CSV or use the super-simple API.
       .col-md-4
         %i.fa.fa-cloud.fa-5x
         %h4 Set it up and forget about it
