--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -43,14 +43,18 @@
         %blockquote
           %p Scrapers are kept in public github repos and then we consume the data from an API, delicious! Is like scrapers with steroids!
           %footer
-            = link_to "https://morph.io/rezzo" do
+            = link_to "https://morph.io/rezzo", class: 'h-card' do
               = image_tag "https://www.gravatar.com/avatar/976cd09092e36aad6a7b959822b78c89?s=60", size: "60x60" , class: "img-circle"
-              %span.quote-source rezzo
+              %span.p-name J. Pablo Pérez Trabucco
+              %span.p-org Fundación Ciudadano Inteligente
+              %span.p-country-name Chile
 
       .col-md-6
         %blockquote
           %p I love Morph because it gives you everything you need to run a scraper. I've written a system which notifies me when Australian FOI disclosure logs are updated.
           %footer
-            = link_to "https://morph.io/hailspuds" do
+            = link_to "https://morph.io/hailspuds", class: 'h-card' do
               = image_tag "https://avatars3.githubusercontent.com/u/851118?v=3&s=60", size: "60x60", class: "img-circle"
-              %span.quote-source hailspuds
+              %span.p-name Will Ockenden
+              %span.p-org Australian Broadcasting Corporation
+              %span.p-country-name Australia
