--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -86,5 +86,11 @@ body {
     img {
       margin-right: .5em;
     }
+
+    .h-card {
+      span {
+        display: block;
+      }
+    }
   }
 }
