remove logo from the introduction section and use a bootstrap jumbotron with centered text instead
relates to #556

--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -24,10 +24,9 @@
   }
 }
 
-.container#introducing {
-  width: 100%;
+.jumbotron#introducing {
   background-color: #b1d05f;
-  padding-top: 100px;
+  text-align: center;
 }
 
 .container#quotes {
