--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -81,7 +81,7 @@ body {
   }
 
   footer {
-    font-size: 1.125em;
+    font-size: 1em;
 
     &:before {
       content: none;
@@ -95,6 +95,10 @@ body {
       span {
         display: block;
       }
+    }
+
+    .p-name {
+      font-size: 1.125em;
     }
   }
 }
