increase size of quote author image to put more focus on the humans this also removes the size attribute so that the image doesn't indent the author name if it doesn't load.

--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -45,7 +45,7 @@
           %footer
             = link_to "https://morph.io/rezzo", class: 'h-card media' do
               .pull-left
-                = image_tag "https://www.gravatar.com/avatar/976cd09092e36aad6a7b959822b78c89?s=60", size: "60x60" , class: "img-circle media-object"
+                = image_tag "https://www.gravatar.com/avatar/976cd09092e36aad6a7b959822b78c89?s=70", class: "img-circle media-object"
               .media-body
                 %span.p-name J. Pablo Pérez Trabucco
                 %span.p-org Fundación Ciudadano Inteligente
@@ -57,7 +57,7 @@
           %footer
             = link_to "https://morph.io/hailspuds", class: 'h-card media' do
               .pull-left
-                = image_tag "https://avatars3.githubusercontent.com/u/851118?v=3&s=60", size: "60x60", class: "img-circle media-object"
+                = image_tag "https://avatars3.githubusercontent.com/u/851118?v=3&s=70", class: "img-circle media-object"
               .media-body
                 %span.p-name Will Ockenden
                 %span.p-org Australian Broadcasting Corporation
