--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -1,4 +1,4 @@
-%nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
+%nav.site-header.navbar.navbar-default.navbar-fixed-top(role="navigation")
   .container
     .navbar-header
       %button.navbar-toggle(type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1")
