make site header fill width on mid sized screens so we can fit more in before it wraps, and also to put nav elements in easier reach of tablet users relates to #550

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,6 +4,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
+@import "global/site-header";
 @import "bootstrap_and_overrides";
 @import "documentation";
 @import "scrapers";
