--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -34,15 +34,6 @@
 
       %ul.nav.navbar-nav.navbar-right
         %li
-          = form_tag search_path, method: "get", role: "search", class: "navbar-form" do
-            .input-group
-              = label_tag :query, "Search", class: 'sr-only'
-              = search_field_tag :q, @q, maxlength: "256", name: "q", type: "search", placeholder: "Search", class: "form-control"
-              .input-group-btn
-                = button_tag value: 'Submit', class: 'btn btn-default', name: nil do
-                  %span.sr-only Submit
-                  %i.fa.fa-search
-        %li
           - if user_signed_in?
             = link_to current_user do
               = owner_image(current_user, 20, false)
@@ -52,3 +43,12 @@
         %li
           - if user_signed_in?
             = link_to "Sign out", destroy_user_session_path
+
+      = form_tag search_path, method: "get", role: "search", class: "navbar-form navbar-right" do
+        .input-group
+          = label_tag :query, "Search", class: 'sr-only'
+          = search_field_tag :q, @q, maxlength: "256", name: "q", type: "search", placeholder: "Search", class: "form-control"
+          .input-group-btn
+            = button_tag value: 'Submit', class: 'btn btn-default', name: nil do
+              %span.sr-only Submit
+              %i.fa.fa-search
