--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -47,24 +47,28 @@ body {
 }
 
 .container#banner {
+  width: 100%;
+  height: 500px;
+  color: white;
+
+  h2,
+  h3 {
+    text-shadow: 0px .5px 3px rgba(20,30,0,0.4);
+  }
 
   h2 {
     font-size: 4em;
- 	@media (min-width: 768px) {
-		margin-top: 70px;
-	}
+
+    @media (min-width: 768px) {
+      margin-top: 70px;
+    }
   }
-  h2,h3 {
-	text-shadow: 0px .5px 3px rgba(20,30,0,0.4);
-  }
+
   .lower {
       position: absolute;
       width: 100%;
       top: 330px;
   }
-  width: 100%;
-  height: 500px;
-  color: white;
 }
 
 .banner-quotes {
