rename 'static' sass partial, 'landing_page' much clearer what it is for

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,6 +8,6 @@
 @import "bootstrap_and_overrides";
 @import "documentation";
 @import "scrapers";
-@import "static";
+@import "landing_page";
 @import "users";
 @import "bootstrap-select";
