--- a/app/assets/stylesheets/_landing_page.scss
+++ b/app/assets/stylesheets/_landing_page.scss
@@ -2,6 +2,31 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.container#banner {
+  width: 100%;
+  height: 516px;
+  color: white;
+
+  h2,
+  h3 {
+    text-shadow: 0px .5px 3px rgba(20,30,0,0.4);
+  }
+
+  h2 {
+    font-size: 4em;
+
+    @media (min-width: 768px) {
+      margin-top: 70px;
+    }
+  }
+
+  .lower {
+      position: absolute;
+      width: 100%;
+      top: 330px;
+  }
+}
+
 #get_started_btn {
   font-size: 1.25em;
   margin-top: 40px;
@@ -33,4 +58,33 @@
   width: 100%;
   padding-top: 48px;
   padding-bottom: 48px;
+}
+
+.banner-quotes {
+  p {
+    font-size: 1.125em;
+  }
+
+  footer {
+    margin-top: 1em;
+    font-size: 1em;
+
+    &:before {
+      content: none;
+    }
+
+    img {
+      margin-right: .5em;
+    }
+
+    .h-card {
+      span {
+        display: block;
+      }
+    }
+
+    .p-name {
+      font-size: 1.125em;
+    }
+  }
 }
