--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -3,7 +3,7 @@
     %h2 Take the hassle out of web scraping
     .lower
       %h3 With all the power so you can scrape anything, anywhere
-      = link_to "Get started", user_omniauth_authorize_path(:github), class: "btn btn-success btn-lg", id: "get_started_btn"
+      = link_to "Get started", user_omniauth_authorize_path(:github), class: "call-to-action btn btn-success btn-lg", id: "get_started_btn"
 
 :javascript
   $(".container#banner").backstretch("#{image_path("unsplash/tumblr_n10n1wmxiS1st5lhmo1_1280.jpg")}");
@@ -41,7 +41,7 @@
 
       Very quickly we realised we’d made something which could scale to help others 	who are liberating their own data!
 
-    = link_to "Add your scraper", user_omniauth_authorize_path(:github), class: "btn btn-default btn-lg"
+    = link_to "Add your scraper", user_omniauth_authorize_path(:github), class: "call-to-action btn btn-default btn-lg"
 
 .banner.container#quotes.banner-quotes
   .container
