--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -1,7 +1,7 @@
 .banner.container#banner
-  %h2 Take the hassle out of web scraping
+  %h2 Take the hassle out of web&nbsp;scraping
   .lower
-    %h3 With all the power so you can scrape anything, anywhere
+    %h3 With all the power so you can scrape&nbsp;anything,&nbsp;anywhere
     = link_to "Get started", user_omniauth_authorize_path(:github), class: "call-to-action btn btn-success btn-lg", id: "get_started_btn"
 
 :javascript
