increase size of #banner subheading on wide screens

--- a/app/assets/stylesheets/_landing_page.scss
+++ b/app/assets/stylesheets/_landing_page.scss
@@ -37,6 +37,12 @@
     }
   }
 
+  h3 {
+    @media (min-width: $screen-md-min) {
+      font-size: 2em;
+    }
+  }
+
   .lower {
       margin-top: 6.5em;
 
