--- a/app/assets/stylesheets/_landing_page.scss
+++ b/app/assets/stylesheets/_landing_page.scss
@@ -68,6 +68,14 @@
   background-color: #FAFAFA;
   text-align: center;
 
+  h4 {
+    font-size: 1.5em;
+  }
+
+  p {
+    font-size: 1.15em;
+  }
+
   .col-md-4 {
     padding-top: 30px;
 
