make text colour and link style softer in #introductory section removes the separate link text colour, and adds border to distinguish them in the text.

--- a/app/assets/stylesheets/_landing_page.scss
+++ b/app/assets/stylesheets/_landing_page.scss
@@ -103,8 +103,20 @@
 }
 
 .jumbotron#introducing {
+  color: #1E241D;
   background-color: #b1d05f;
   text-align: center;
+
+  p a {
+    color: #1E241D;
+    border-bottom: 2px darken(#b1d05f, 20%) solid;
+
+    &:hover {
+      text-decoration: none;
+      color: #111;
+      border-color: #1E241D;
+    }
+  }
 }
 
 .container#quotes {
