add background color to make link hover/focus clearer also adds subtle shadow effect to deal with text clash with border

--- a/app/assets/stylesheets/_landing_page.scss
+++ b/app/assets/stylesheets/_landing_page.scss
@@ -111,10 +111,13 @@
     color: #1E241D;
     border-bottom: 2px darken(#b1d05f, 20%) solid;
 
-    &:hover {
+    &:hover,
+    &:focus {
       text-decoration: none;
       color: #111;
       border-color: #1E241D;
+      background-color: lighten(#b1d05f, 10%);
+      text-shadow: 2px 2px 0 lighten(#b1d05f, 5%);
     }
   }
 }
