--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -7,7 +7,7 @@
 :javascript
   $(".container#banner").backstretch("#{image_path("unsplash/tumblr_n10n1wmxiS1st5lhmo1_1280.jpg")}");
 
-.banner.container#benefits
+.banner#benefits
   .container
     .row
       .col-md-4
@@ -43,7 +43,7 @@
 
       = link_to "Add your scraper", user_omniauth_authorize_path(:github), class: "call-to-action btn btn-default btn-lg"
 
-.banner.container#quotes.banner-quotes
+.banner.banner-quotes#quotes
   .container
     .row
       .col-md-6
