fix doubled padding on #introducing banner
add row for negative margin and remove
padding from the container.

--- a/app/assets/stylesheets/_landing_page.scss
+++ b/app/assets/stylesheets/_landing_page.scss
@@ -107,6 +107,10 @@
   background-color: #b1d05f;
   text-align: center;
 
+  > .container {
+    padding: 0;
+  }
+
   p a {
     color: #1E241D;
     border-bottom: 2px darken(#b1d05f, 20%) solid;
