--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -31,17 +31,18 @@
 
 .banner.jumbotron#introducing
   .container
-    .col-md-10.col-md-offset-1.col-lg-8.col-lg-offset-2
-      :markdown
-        Unlock real data from websites like [fire incidents in the Czech Republic](https://morph.io/soit-sk/firebrno), [upcoming legislation in the Chilean parliament](https://morph.io/ciudadanointeligente/pmocl-agendas), [postcodes in Slovakia](https://morph.io/soit-sk/slovakia_post_codes) and [buildings which are planned to be built or knocked down in Australia](https://morph.io/planningalerts-scrapers).
+    .row
+      .col-md-10.col-md-offset-1.col-lg-8.col-lg-offset-2
+        :markdown
+          Unlock real data from websites like [fire incidents in the Czech Republic](https://morph.io/soit-sk/firebrno), [upcoming legislation in the Chilean parliament](https://morph.io/ciudadanointeligente/pmocl-agendas), [postcodes in Slovakia](https://morph.io/soit-sk/slovakia_post_codes) and [buildings which are planned to be built or knocked down in Australia](https://morph.io/planningalerts-scrapers).
 
-        At the OpenAustralia Foundation, most of our civic tech projects also rely on information we can only get by scraping it, like when we need  [MP’s contact details] (https://morph.io/openaustralia/aus_mp_contact_details) for openaustralia.org. Building and maintaining scrapers got the data we needed but the process was time consuming.
+          At the OpenAustralia Foundation, most of our civic tech projects also rely on information we can only get by scraping it, like when we need  [MP’s contact details] (https://morph.io/openaustralia/aus_mp_contact_details) for openaustralia.org. Building and maintaining scrapers got the data we needed but the process was time consuming.
 
-        So we made morph.io to look after those scrapers for us. Morph.io looks after all the little things that you don't anticipate that often take the most time.
+          So we made morph.io to look after those scrapers for us. Morph.io looks after all the little things that you don't anticipate that often take the most time.
 
-        Very quickly we realised we’d made something which could scale to help others 	who are liberating their own data!
+          Very quickly we realised we’d made something which could scale to help others 	who are liberating their own data!
 
-      = link_to "Add your scraper", user_omniauth_authorize_path(:github), class: "call-to-action btn btn-default btn-lg"
+        = link_to "Add your scraper", user_omniauth_authorize_path(:github), class: "call-to-action btn btn-default btn-lg"
 
 .banner.banner-quotes#quotes
   .container
