--- a/app/assets/stylesheets/_landing_page.scss
+++ b/app/assets/stylesheets/_landing_page.scss
@@ -149,7 +149,10 @@
 
   footer {
     margin-top: 1em;
-    font-size: 1em;
+
+    @media (min-width: $screen-sm-min) {
+      font-size: 1em;
+    }
 
     &:before {
       content: none;
