--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -8,7 +8,7 @@
 
 #owner-info {
   padding: 15px 0;
-  background-color: #b1d05f;
+  background-color: $offset-color;
   width: 100%;
   h1 {
     margin-top: 0;
