style call to action to match morph green colour instead of the bootstrap default green. there are a few additonal changes that help the text stay readable.

--- a/app/assets/stylesheets/_landing_page.scss
+++ b/app/assets/stylesheets/_landing_page.scss
@@ -57,8 +57,19 @@
   }
 
   .call-to-action {
+    border: 0;
+    background-color: darken($offset-color, 7%);
+    text-shadow: 1px 1px 0 darken($offset-color, 20%);
+    letter-spacing: 1px;
+
     @media (min-width: $screen-md-min) {
       margin: 1.5em 0 0;
+      text-shadow: 1px 2px 0 darken($offset-color, 20%);
+    }
+
+    &:hover,
+    &:focus {
+      background-color: darken($offset-color, 15%);
     }
   }
 }
