Keep call to action button with same message

--- a/app/views/static/_signed_out_index.html.haml
+++ b/app/views/static/_signed_out_index.html.haml
@@ -36,7 +36,7 @@
         :markdown
           #{render "introducing.md"}
 
-        = link_to "Add your scraper", user_omniauth_authorize_path(:github), class: "call-to-action btn btn-default btn-lg"
+        = link_to "Get started", user_omniauth_authorize_path(:github), class: "call-to-action btn btn-default btn-lg"
 
 .banner.banner-quotes#quotes
   .container
