use the proper bootstrap menu toggler icon
This replaces the current Foundation icon which
appears swashed up.

fixes #549

--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -3,7 +3,9 @@
     .navbar-header
       %button.navbar-toggle(type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1")
         %span.sr-only Toggle navigation
-        %span.fa.fa-bars
+        %span.icon-bar
+        %span.icon-bar
+        %span.icon-bar
       = link_to "morph.io", root_path, class: "navbar-brand"
     .collapse.navbar-collapse#bs-example-navbar-collapse-1
       %ul.nav.navbar-nav
