make sure the navigation is tall enough for every item In bootstrap, the height of a 'fixed' navbar is hardcoded, but it isn't tall enough for our navbar, so an element is hidden on the end. This makes the element taller so you can see every nav item.
This can be reverted if we stop using the 'fixed' navbar.

--- a/app/assets/stylesheets/global/_site-header.scss
+++ b/app/assets/stylesheets/global/_site-header.scss
@@ -12,3 +12,9 @@
     }
   }
 }
+
+// override bootstrap default height, which
+// is too short for our content.
+.navbar-fixed-top .navbar-collapse {
+  max-height: 370px;
+}
