add TableSaw plugin for responsive scraper data tables
Currently the data tables are hard to quickly comprehend on
small screens. The Filament Group's TableSaw
plugin to adapt tables to a definition list appearance on
small screens.

This commit adds the required TableSaw js and scss files and necessary
class names to the table.

Relates to #356

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,6 +4,8 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
+@import "vendor/tablesaw.stackonly";
+
 @import "global/site-header";
 @import "bootstrap_and_overrides";
 @import "documentation";
