--- a/app/views/scrapers/_data.html.haml
+++ b/app/views/scrapers/_data.html.haml
@@ -23,7 +23,7 @@
                 = button_link_to "Use the API", api_documentation_index_path(scraper: scraper.full_name)
             %p rows #{[10, scraper.database.no_rows(table)].min} / #{scraper.database.no_rows(table)}
             .table-responsive.scraper-data
-              %table.table.table-striped.table-bordered.table-condensed
+              %table.table.table-striped.table-bordered.table-condensed.tablesaw.tablesaw-stack{data: {tablesaw: {mode: "stack" }}}
                 - unless rows.empty?
                   %tr
                     - rows.first.each_key do |field|
