--- a/app/views/scrapers/_data.html.haml
+++ b/app/views/scrapers/_data.html.haml
@@ -25,15 +25,17 @@
             .table-responsive.scraper-data
               %table.table.table-striped.table-bordered.table-condensed.tablesaw.tablesaw-stack{data: {tablesaw: {mode: "stack" }}}
                 - unless rows.empty?
-                  %tr
-                    - rows.first.each_key do |field|
-                      %th= field
-                - rows.each do |row|
-                  %tr
-                    - row.each_value do |v|
-                      %td
-                        %div.has-popover{data: {toggle: "popover", placement: "bottom", trigger: "hover", content: v, container: "body"}}
-                          = auto_link_fallback(v.to_s)
+                  %thead
+                    %tr
+                      - rows.first.each_key do |field|
+                        %th= field
+                  %tbody
+                    - rows.each do |row|
+                      %tr
+                        - row.each_value do |v|
+                          %td
+                            %div.has-popover{data: {toggle: "popover", placement: "bottom", trigger: "hover", content: v, container: "body"}}
+                              = auto_link_fallback(v.to_s)
   - else
     %h3 Data
     .alert.alert-danger(role="alert")
