set table layout to change at point the menu changes layout This uses the $grid-float-breakpoint variable to set when TableSaw turns off and the table rows are evenly spaced.

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -3,13 +3,15 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .table-responsive.scraper-data {
-  @include tablesaw-stack( 50em );
+  @include tablesaw-stack( $grid-float-breakpoint );
 
   table {
     white-space: nowrap;
     td, th {
-      max-width: 200px;
-      overflow: hidden;
+      @media (min-width: $grid-float-breakpoint) {
+        max-width: 200px;
+        overflow: hidden;
+      }
     }
   }
   overflow-x: scroll;
