make scss indentation consistent (code formatting only)

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -6,11 +6,13 @@
   @include tablesaw-stack( $grid-float-breakpoint );
 
   overflow-x: scroll;
-  -webkit-mask: -webkit-linear-gradient(
+  -webkit-mask:
+    -webkit-linear-gradient(
       left,
       rgba(255,255,255,1) 95%,
       rgba(255,255,255,0)
     );
+  ;
 
   table {
     td, th {
